# proving-ground

./: .gitignore  README.md  fleet-collect-config-3model-calibration.json  fleet-collect-config-direct.json  fleet-collect-config-legendre-deep.json  fleet-collect-config-ren1-2model.json  fleet-collect-config-ren1-local.json  fleet-collect-config-ren1.json  fleet-collect-config-ren3-dual.json  fleet-collect-config-ren3-e2b.json  fleet-collect-config.json  pyproject.toml
analysis/: first-run-findings.md  legendre-vs-collatz-decomposability.md
docker/: Dockerfile
docs/: LEAN.md  SCORING.md  index.html  leaderboard.md
examples/: demo_pipeline.py
lean/: ProvingGround.lean  lakefile.toml
problems/: benchmark-v1.json  example-reduction.json  first-run.json
runs/: benchmark-v1-claude.json  calib-add-identities-first-run.json  calib-tractable-consecutive-v1  calib-tractable-even-or-odd-v1  calib-tractable-even-product-v1  calib-tractable-prime-gaps-v1  calib2-tractable-even-or-odd  collection-calib-add-identities-v1.json  collection-calib-mul-identities-v1.json  collection-calib-tractable-consecutive-v1.json  collection-calib-tractable-even-or-odd-v1.json  collection-calib-tractable-even-product-v1.json  collection-collatz-ren1-local-v1.json  collection-goldbach-3model-v1.json  collection-goldbach-ren3-e2b-v1.json  collection-legendre-ren1-local-v1.json  collection-legendre-ren1-local-v2.json  collection-legendre-ren1-local-v3.json  collection-legendre-ren3-dual-v2.json  collection-tractable-3model-v1.json  collection-tractable-ren1-cross-model.json  (+11 more)
(+37 files in other folders)
